fixing spacing issue in list layout

--- a/assets/css/stylertl.css
+++ b/assets/css/stylertl.css
@@ -96,7 +96,7 @@ body {
 	-webkit-order: 2;
 	order: 1;
 	min-width: 0;
-	margin: 0 0 0 2.5%;
+	margin: 0 2.5% 0 0;
 }
 
 .sidebar--left {
